  \itemize{
    \item Add \code{projectReducedDim} function to project points into
    an existing reduced dimensionality embedding.
    \item Support "color" and "colour" spellings in all plotting functions.
    \item Add \code{order_by} argument to cellwise plot functions.
    \item Add \code{rasterise} argument to \code{plotReducedDim} using
    \code{\link[ggrastr]{rasterise}}.
  }
}
\section{Changes in version 1.24.0, Bioconductor 3.15 Release}{
\itemize{
    \item Remove diffusion map functions that relied on destiny.
    \item Add \code{point.padding},\code{force} args to \code{plotReducedDim}; passed to \code{geom_text_repel}.
    \item Add warning about unused \code{use_dimred} argument in \code{runTSNE}.
}}


\section{Changes in version 1.22.0, Bioconductor 3.14 Release}{
\itemize{
    \item Rename \code{colour_columns_by} in \code{plotHeatmap} to 
    \code{color_columns_by} to match other arguments.
    \item Add \code{color_rows_by} and \code{row_annotation_colors} arguments
    to \code{plotHeatmap}, similar to analogous column arguments.
    \item Change \code{text_by} annotations in plotReducedDim to use 
    \code{geom_text_repel} from \code{ggrepel}.
}}

\section{Changes in version 1.20.0, Bioconductor 3.13 Release}{
\itemize{
    \item \code{runMDS} can use user-supplied function for calculating the 
    distance matrix. \code{runMDS} can optionally store the distance matrix 
    computed. \code{runMDS} also stores the \code{eig} and \code{GOF} fields 
    of the object returned.
    \item Made the handling of center, scale, color and limits similar in 
    plotDots, plotHeatmap, and plotGroupedHeatmap
    \item Add \code{use_fitsne} argument to runTSNE allowing the use of fast interpolated t-SNE in place of Barnes-Hut t-SNE.
}}

\section{Changes in version 1.18.0, Bioconductor 3.12 Release}{
\itemize{
    \item Migrated many utilities to the \pkg{scuttle} package.