@@ -8,8 +8,8 @@ Authors@R: c(
         person("Vladimir", "Kiselev", role=c("ctb"), email="vk6@sanger.ac.uk"),
         person("Felix G.M.", "Ernst", role=c("ctb"), email="felix.gm.ernst@outlook.com"),
         person("Alan", "O'Callaghan", role=c("ctb", "cre"), email="alan.ocallaghan@outlook.com"))
-Version: 1.25.7
-Date: 2022-09-19
+Version: 1.25.8
+Date: 2022-10-03
 License: GPL-3
 Title: Single-Cell Analysis Toolkit for Gene Expression Data in R
 Description: A collection of tools for doing various analyses of
@@ -43,8 +43,9 @@ Imports:
     RcppML,
     uwot,
     pheatmap,
-    ggrastr,
-    ggrepel
+    ggrepel,
+    densvis,
+    ggrastr
 Suggests: 
     BiocStyle,
     snifter,
