@@ -23,7 +23,10 @@ calculateUMAP(x, ...)
   ...,
   external_neighbors = FALSE,
   BNPARAM = KmknnParam(),
-  BPPARAM = SerialParam()
+  BPPARAM = SerialParam(),
+  use_densvis = FALSE,
+  dens_frac = 0.3,
+  dens_lambda = 0.1
 )
 
 \S4method{calculateUMAP}{SummarizedExperiment}(x, ..., exprs_values = "logcounts")
@@ -76,6 +79,10 @@ otherwise, the \code{\link[uwot]{umap}} defaults are used.}
 \item{BNPARAM}{A \linkS4class{BiocNeighborParam} object specifying the neighbor search algorithm to use when \code{external_neighbors=TRUE}.}
 
 \item{BPPARAM}{A \linkS4class{BiocParallelParam} object specifying whether the PCA should be parallelized.}
+
+\item{use_densvis}{Logical scalar indicating whether \code{\link[densvis]{densne}} should be used to perform density-preserving t-SNE.}
+
+\item{dens_frac, dens_lambda}{See \code{\link[densvis]{densne}}}
 
 \item{exprs_values}{Integer scalar or string indicating which assay of \code{x} contains the expression values.}
 
